--- a/swagger/cart.yaml
+++ b/swagger/cart.yaml
@@ -4,6 +4,9 @@ info:
   version: v0.0.1
 host: "api.bigcommerce.com"
 basePath: "/stores/{{store_id}}/v3"
+tags:
+  - name: Cart
+    description: BigCommerce Cart API Definition.
 consumes:
   - application/json
 produces:
