fix response type of listing request

--- a/swagger/channels.yaml
+++ b/swagger/channels.yaml
@@ -216,7 +216,7 @@ paths:
         200:
           description: Successful Response
           schema:
-            $ref: '#/definitions/Listing'
+            $ref: '#/definitions/ListingResponse'
 definitions:
   CollectionMeta:
     type: object
